--- a/app/alertStation/app/src/main/AndroidManifest.xml
+++ b/app/alertStation/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.aviram.alertstation">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -11,6 +12,7 @@
         android:icon="@drawable/icon00"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".Home"
             android:label="@string/app_name">
@@ -26,6 +28,16 @@
         <activity
             android:name=".HomePage"
             android:label="@string/title_activity_home_page"></activity>
+
+        <service
+            android:name=".AlarmService"
+            android:enabled="true" />
+
+        <receiver
+            android:name=".AlarmReceiver"
+            android:enabled="true"
+            android:exported="true"
+            />
     </application>
 
 </manifest>
