--- a/app/alertStation/app/src/main/AndroidManifest.xml
+++ b/app/alertStation/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
@@ -29,6 +30,10 @@
         <activity
             android:name=".HomePage"
             android:label="@string/title_activity_home_page"></activity>
+
+
+        <service android:name=".MyService"
+            android:enabled="true"/>
 
         <service
             android:name=".AlarmService"
